Bug 65498 - FILESAVE: Cannot save file opened with --view even after enabling editing
Summary: FILESAVE: Cannot save file opened with --view even after enabling editing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
3.6.0.4 release
Hardware: All All
: medium normal
Assignee: Stephan Bergmann
URL:
Whiteboard: target:5.0.0 target:4.4.4
Keywords: bibisected, bisected, regression
: 88844 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-06-07 09:25 UTC by HansPL
Modified: 2015-12-17 07:15 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description HansPL 2013-06-07 09:25:02 UTC
Preface:  We have some commonly used spreadsheets on our server and the policy to open them read-only for viewing and switch to edit mode only for editing.  For this,  we add the buttons "Edit File" (Datei bearbeiten in my German l10n) and "Reload" to our LO toolbars,  and we use shortcuts with the -view command line option.

To reproduce:  

Open an existing document either with the -view command line option,  or,  from inside LO with its dialog ticking the "read-only" box.  

LO opens it as desired in read-only mode,  indicating "Write Protected" (Schreibgeschützt) in its title bar.  

For editing,  click on the added button "Edit File" — the format toolbar appears,  the file is now editable.  But the lock file is not created,  the title bar still shows "Write Protected",  the "Save" button is still greyed out:  I cannot save the edited file.  

On the other hand:  when first opening in edit mode and then switching to read-only,  I can switch back and forth fine.  


This is a regression,  it worked fine before.  I believe this bug appeared with 3.5 or 3.6.  

On a related note:  in earlier OOo,  we got a nice dialog when trying to open a already opened and locked document,  explaining who has already locked the file and giving the options to abort,  open read-only or get a local copy.  Since several LO versions,  this regressed to a meaningless error message.  

Hans
Comment 1 Luuk 2013-06-08 12:18:06 UTC
I can reproduce this under Windows7/LibreOffice 4.0.3.3
Comment 2 HansPL 2013-10-07 12:14:11 UTC
Still defunct with LO 4.1.2.3 !
Comment 3 HansPL 2014-09-16 07:28:41 UTC
One year now and no response…?  Like for many other annoying small bugs.  

How about a really resolute bug fixing release?  


Hans
Comment 4 Matthew Francis 2015-04-24 13:31:40 UTC
Bibisect result from 43all:
# first bad commit: [1273b9e25faacf414c611503c2a11283af274044] source-hash-cf04745f7a027594fd64a493c276a8280dbccfe1

There's only one real candidate in that range, which is the below commit.
Adding Cc: to sbergman@redhat.com; Could you possibly take a look at this one? Thanks

commit b9ecec7c74687ed5a9470cffb7d02e0e6e83107e
Author: Stephan Bergmann <sbergman@redhat.com>
Date:   Fri Jun 1 17:32:07 2012 +0200

    Allow for editing of read-only documents
Comment 5 Matthew Francis 2015-04-24 13:32:14 UTC
*** Bug 88844 has been marked as a duplicate of this bug. ***
Comment 6 Commit Notification 2015-04-27 09:48:33 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a199cad8376a5470c50125def2738b44b55ec018

tdf#65498, tdf#87545: Don't confuse logically r/o doc with physically r/o

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2015-04-30 08:34:54 UTC
Stephan Bergmann committed a patch related to this issue.
It has been pushed to "libreoffice-4-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9ad420fba51ee539ecf4a6cedc224e1025632f5f&h=libreoffice-4-4

tdf#65498, tdf#87545: Don't confuse logically r/o doc with physically r/o

It will be available in 4.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 Robinson Tryon (qubit) 2015-12-17 07:15:36 UTC
Migrating Whiteboard tags to Keywords: (bibisected)
[NinjaEdit]