tdf#65498, tdf#87545: Don't confuse logically r/o doc with physically r/o

b9ecec7c74687ed5a9470cffb7d02e0e6e83107e "Allow for editing of read-only
documents" introduced

 "A new state of 'IsOriginallyReadOnly' needed to be added to the medium, to
  keep track whether the medium was originally opened r/o (and is thus assumed
  to be physically r/o), as toggling SID_EDITDOC in the view also changes the
  open mode of the underlying medium.  Instead of trying to fully understand and
  disentangle that horrible mess, I just added yet another state to the mess..."

But that heuristic is apparently too simplistic, as it treats documents
originally opened "logically r/o" (via --view command line argument, or by
checking the corresponding checkbox in the Open dialog) as "physically r/o" too,
which leads to unexpected behavior when such documents are later switched into
r/w Edit mode.

An approach that hopefully works better overall is to set IsOriginallyReadOnly
only if the document originally is r/o as reported by OSL (for a document with a
file URL).

Change-Id: I32d5ec655d7556a70680aee55feda4c6eea7795f
(cherry picked from commit a199cad8376a5470c50125def2738b44b55ec018)
Reviewed-on: https://gerrit.libreoffice.org/15549
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>